# pico-blank-cpp

./: .gitmodules  Basic Guide  CMakeLists.txt  README  compile.sh  main.cpp  pinout diagram  serial_monitor.sh  upload.sh
source/: CMakeLists.txt  main.cpp
